--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+//apply plugin: 'kotlin-android'
+//apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 29
     defaultConfig {
@@ -33,24 +33,28 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.android.support:multidex:1.0.3'
     //implementation files('libs/app.jar')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
+   // implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
 
 
 }
 
 
-
+//  gradle vestTask
+def modules = ['app']
 apply plugin: 'scalpel-plugin' // scalpel_plugin.properties
 // ScalpelConfig 名字和Constant.SCALPEL_CONFIG对应
 ScalpelConfig {
     enable true
     enableLog true
-    enableViewClickTrace true
+    enableViewClickTrace false
+    enableMethodCostTime false
     enableModification true
+    vestModules modules
     GarbageConfig {
-        enableGarbageCode true
+        enableGarbageCode false
         handleInnerClass false
         garbageCodeInjectRatio 1
         garbageType 'C'
+
     }
 }
