--- a/scalpelplugin/build.gradle
+++ b/scalpelplugin/build.gradle
@@ -13,14 +13,15 @@ repositories {
 
 
 dependencies {
-    compile localGroovy()
-    compile gradleApi()
+    implementation localGroovy()
+    implementation gradleApi()
 //    implementation fileTree(dir: 'libs', include: ['*.jar'])
 //   compile 'com.android.tools.build:gradle:3.4.1'
-    compile 'com.android.tools.build:gradle:3.4.1'
+    implementation 'com.android.tools.build:gradle:3.4.1'
 //    implementation("org.dom4j:dom4j:2.1.1")
     //compile "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.40"
      implementation files('libs/commons-codec-1.14.jar')
+    implementation 'dom4j:dom4j:1.6.1'
 }
 
 sourceCompatibility = "7"
